# FileLoader

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  local.yaml  production.yaml  pyproject.toml
.github/workflows/: build and deploy.yml  deploy  deploy_on_main.yaml  publish-image.yaml  push_any_except_main.yaml
config/: settings.py  urls.py
file/: admin.py  models.py  tasks.py  urls.py  validators.py  views.py
file/migrations/: 0001_initial.py
